Fix Scrollbar and cards in Sla travel page.

--- a/src/app/views/sla-item-parameter-tables/sla-travel/sla-travel.component.css
+++ b/src/app/views/sla-item-parameter-tables/sla-travel/sla-travel.component.css
@@ -36,3 +36,15 @@ table {
 tbody tr:hover{
   background-color: #cccccc;
 }
+
+#travelCard{
+  min-height: 450px;
+}
+
+#slaTravelTable{
+  min-height: 450px;
+}
+
+#travelYearScrollbar{
+  height: 397px;
+}
